bppackaging/src/objects/Hours_Logged__c.object
<CustomObject>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Hours_Logged</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notes Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>The notes recorded in the Log Work action modal window.</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Estimate__c</fullName>
        <label>Original Estimate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previously_Logged__c</fullName>
        <label>Previously Logged</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Estimate__c</fullName>
        <formula>TEXT(Remaining_Estimate_d__c) + &apos;d &apos; +  TEXT(Remaining_Estimate_h__c) + &apos;h &apos; +  TEXT(Remaining_Estimate_m__c) + &apos;m&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Estimate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Estimate_d__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Remaining Estimate d</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Estimate_h__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Remaining Estimate h</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Estimate_m__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Remaining Estimate m</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Order_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Header</label>
        <referenceTo>Service_Order_Header__c</referenceTo>
        <relationshipLabel>Hours Logged</relationshipLabel>
        <relationshipName>Hours_Logged</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <formula>TEXT( Time_Spent_d__c) + &apos;d &apos; + TEXT( Time_Spent_h__c) + &apos;h &apos; + TEXT(Time_Spent_m__c) + &apos;m&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Spent_d__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Time Spent d</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent_h__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Time Spent h</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent_m__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Time Spent m</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Performed_Date__c</fullName>
        <label>Work Performed Date</label>
        <type>Date</type>
    </fields>
    <label>Hours Logged</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HN-{00000000}</displayFormat>
        <label>Hours Logged Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hours Logged</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>